--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=python；
-*.css linguist-language=python；
-*.html linguist-language=python
+*.js linguist-language=python;
+*.css linguist-language=python;
+*.html linguist-language=python;
